<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"/>
<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
>>>>>>> parent of d1e73a7 (made a new java fragment and replaced the dashboard xml for profile)

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"/>
>>>>>>> parent of d1e73a7 (made a new java fragment and replaced the dashboard xml for profile)

    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/title_search" />

</menu>