<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.group.CreateGroupActivity"
    android:background="#B2E3E1">

    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:text="@string/group_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <AutoCompleteTextView
        android:id="@+id/group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/post_title"
        android:maxLines="1" />

    <TextView
        android:id="@+id/labelTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:text="@string/Tags"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/group_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="enter tags, use semicolon"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/imageButton2"
            style="@android:style/Widget.Holo.Light.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/ic_baseline_add_24"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/labelDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:text="@string/Description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <EditText
        android:id="@+id/group_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/post_content"

        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/create_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/group_create"
        android:background="@color/blue"
        android:textColor="@color/white"/>

</LinearLayout>